dnl Process this file with autoconf to produce a configure script.

AC_INIT(configure.in)
AM_INIT_AUTOMAKE(asunder, 2.9.6)
AM_CONFIG_HEADER(config.h)
AM_MAINTAINER_MODE
IT_PROG_INTLTOOL([0.34.90])

AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC

pkg_modules="gtk+-2.0 >= 2.4.0, gthread-2.0 >= 2.4.0, libdiscid >= 0.6.0, libmusicbrainz5 >= 5.1 "
PKG_CHECK_MODULES(PACKAGE, [$pkg_modules])
AC_SUBST(PACKAGE_CFLAGS)
AC_SUBST(PACKAGE_LIBS)

GETTEXT_PACKAGE=asunder
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE", [Gettext package.])

AM_GLIB_GNU_GETTEXT

CFLAGS="$CFLAGS -Wall -pedantic -std=gnu99 -Wundef -Wcast-align -W -Wpointer-arith -Wwrite-strings -Wno-unused-parameter -Wno-format-truncation"

# GTK-2.3.1 deprecated the thread API but I am not going to drop support for 
# everything older than that (pretty much all of GTK2!). Just silence the 
# warnings and hopefully I won't miss anything important.
CFLAGS="$CFLAGS -Wno-deprecated-declarations"

# The translator credits string is longer than 4095 bytes, so put this in to 
# prevent the warning from triggering.
CFLAGS="$CFLAGS -Wno-overlength-strings"

AC_OUTPUT([
Makefile
src/Makefile
po/Makefile.in
])
